syntax = "proto3";

package todo;

import "google/protobuf/timestamp.proto";

message Todo {
  string id = 1;
  string title = 2;
  string description = 3;
  bool done = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  int32 version = 7;
  Priority priority = 8;
}

enum Priority {
  LOW = 1;
  MEDIUM = 2;
  HIGH = 3;
}

service TodoService {
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);
  rpc GetTodoById(GetTodoByIdRequest) returns (GetTodoByIdResponse);
  rpc GetAllTodos(GetAllTodosRequest) returns (GetAllTodosResponse);
  rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse);
  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);
  rpc MarkTodoDone(MarkTodoDoneRequest) returns (MarkTodoDoneResponse);
}

message CreateTodoRequest {
  string title = 1;
  string description = 2;
  Priority priority = 3;
}

message CreateTodoResponse {
  Todo todo = 1;
}

message GetTodoByIdRequest {
  string id = 1;
}

message GetTodoByIdResponse {
  Todo todo = 1;
}

message GetAllTodosRequest {
  int32 page = 1;
  int32 page_size = 2;
  string filter = 3;
  string sort_by = 4;
  bool ascending = 5;
}

message GetAllTodosResponse {
  repeated Todo todos = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message UpdateTodoRequest {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  optional Priority priority = 4;
}

message UpdateTodoResponse {
  Todo todo = 1;
  bool success = 2;
}

message DeleteTodoRequest {
  string id = 1;
}

message DeleteTodoResponse {
  bool success = 1;
}

message MarkTodoDoneRequest {
  string id = 1;
  bool done = 2;
}

message MarkTodoDoneResponse {
  bool success = 1;
  Todo updated_todo = 2;
}

message Error {
  int32 code = 1;
  string message = 2;
}